--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -52,12 +52,14 @@
                                 <p:panel header="Agent Reports" style="width: 400px;margin: auto;"  toggleable="true">  
                                     <h:panelGrid columns="1">
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent History" action="/channel/channel_report_agent_history"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent History(Credit Limit Update)" action="/channel/channel_report_agent_history_2"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Statement(27)" action="/channel/channel_report_agent_history_1"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Balance(32)" action="/channel/channel_report_agent_balance"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Deposit(36)" action="/channel/channel_report_agent_payment_bill"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Total And Count(29 &amp; 30)" action="/channel/channel_report_agent_wise_channel_total"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Wise Channel Appoinment Count Summery" action="/channel/channel_report_agent_wise_channel_total_summery"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Channel Books Report()"  action="/channel/channel_report_agent_referece_book" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Agent Channel Bills For Book"  action="/channel/channel_report_agent_referece_book_1" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Agent Details()" action="/channel/channel_report_agent_details"/>
                                     </h:panelGrid>
                                 </p:panel>
