--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -28,6 +28,9 @@
                                         <p:commandButton value="(3) Staff Payroll" 
                                                          action="/hr/hr_report_staff_payroll" 
                                                          styleClass="linkButton" ajax="false" />
+                                        <p:commandButton value="(3) Staff Payroll(Accountant)" 
+                                                         action="/hr/hr_report_staff_payroll_1" 
+                                                         styleClass="linkButton" ajax="false" />
                                         <p:commandButton value="(3.1) Staff Payrol(By Department)" 
                                                          action="/hr/hr_report_staff_payroll_department" 
                                                          styleClass="linkButton" ajax="false" />
