--- a/src/main/webapp/reportInstitution/report_opd_investigation_summery_by_category.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_investigation_summery_by_category.xhtml
@@ -54,6 +54,7 @@
 
             <p:dataTable id="opd" rowIndexVar="i"  value="#{serviceSummery.billItemWithFees}" var="d" 
                          paginator="false"
+                         rowStyleClass="#{d.billItem.bill.cancelled or d.billItem.bill.billedBill ne null?'crossLine':''}"
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          rowsPerPageTemplate="5,10,15,20">                   
 
@@ -111,6 +112,20 @@
                         <h:outputLabel value="Doctor Name" />
                     </f:facet>
                     <p:outputLabel value="#{d.staffsNames}" />
+                </p:column>
+                
+                <p:column headerText="Professional Fee" style="text-align: right;">
+                    <f:facet name="header">
+                        <h:outputLabel value="Professional Fee" />
+                    </f:facet>
+                    <p:outputLabel value="#{d.proFee}">
+                        <f:convertNumber pattern="#,##0.00"/>
+                    </p:outputLabel>
+                    <f:facet name="footer">
+                        <h:outputLabel value="#{serviceSummery.proFeeTotal}">
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputLabel>
+                    </f:facet>
                 </p:column>
 
                 <p:column headerText="Hospital Fee" style="text-align: right;">
