--- a/src/main/webapp/admin_doctor_consultant.xhtml
+++ b/src/main/webapp/admin_doctor_consultant.xhtml
@@ -48,6 +48,8 @@
                         <p:panel>
                             <h:panelGrid id="gpDetail" columns="1">
                                 <h:panelGrid id="gpDetailText" columns="2">
+                                    <h:outputText  value="ID" />
+                                    <h:outputText  value="#{consultantController.current.id}" />
                                     <h:outputText  value="Title" />
                                     <p:selectOneMenu  id="cmbTitle"  
                                                       value="#{consultantController.current.person.title}"  >
