--- a/src/main/webapp/hr/hr_staff_basic_individual.xhtml
+++ b/src/main/webapp/hr/hr_staff_basic_individual.xhtml
@@ -23,7 +23,7 @@
                                              value="#{staffBasicController.current.staff}"
                                              completeMethod="#{staffController.completeStaffCode}" var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
                                              converter="stfcon"   >   
-                                <f:ajax event="itemSelect" execute="@this" render="tb7 stfCode" listener="#{staffBasicController.makeItemNul}" />
+                                <f:ajax event="itemSelect" execute="@this" render="tb7 stfCode stfCode2" listener="#{staffBasicController.makeItemNul}" />
                                 <p:column headerText="Staff Name">
                                     <h:outputLabel value="#{mys.person.name}"/>
                                 </p:column>
@@ -34,6 +34,8 @@
                             </p:autoComplete>
                             <p:outputLabel value="Emp Code"></p:outputLabel>
                             <p:outputLabel id="stfCode" value="#{staffBasicController.current.staff.code}"></p:outputLabel>
+                            <p:outputLabel value="EPF Code"></p:outputLabel>
+                            <p:outputLabel id="stfCode2" value="#{staffBasicController.current.staff.epfNo}"></p:outputLabel>
                             <h:outputLabel value="From"/>
                             <p:calendar id="frm" navigator="true" value="#{staffBasicController.current.fromDate}" pattern="dd MM yyyy" >                                
                             </p:calendar>
@@ -47,8 +49,6 @@
                             <p:inputText autocomplete="off"  value="#{staffBasicController.current.dblValue}"/>
 
                             <p:commandButton id="btnAdd" value="Save" action="#{staffBasicController.save}" ajax="false" onclick="onSubmitButton();"/>
-                            <p:defaultCommand target="btnAdd"/>
-
                             <p:commandButton value="Clear" action="#{staffBasicController.makeNull}" ajax="false" onclick="onSubmitButton();" />
 
                         </h:panelGrid>
