--- a/src/main/webapp/hr/hr_staff_loan_installment.xhtml
+++ b/src/main/webapp/hr/hr_staff_loan_installment.xhtml
@@ -57,8 +57,9 @@
                         </p:selectBooleanCheckbox>
                         <h:outputLabel value="Complete Date"/>
                         <p:calendar id="calComplete" value="#{staffLoanController.current.completedAt}"  navigator="true" pattern="dd MM yyyy"  />
-                        <p:commandButton value="Save" action="#{staffLoanController.save}" ajax="false" onclick="onSubmitButton();"/>
-                        <p:commandButton value="Remove" action="#{staffLoanController.remove}" ajax="false" onclick="onSubmitButton();"/>
+                        <p:commandButton value="Save" action="#{staffLoanController.save}" ajax="false" />
+                        <p:commandButton value="Clear" action="#{staffLoanController.makeNull}" ajax="false" />
+                        <p:commandButton value="Remove" action="#{staffLoanController.remove}" ajax="false" />
                     </h:panelGrid>
                 </p:panel>
                 <p:spacer height="30" />
