--- a/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
@@ -19,7 +19,7 @@
                     <p:autoComplete  forceSelection="true" value="#{staffPaySheetComponentController.current.staff}"
                                      completeMethod="#{staffController.completeStaffCode}" var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
                                      converter="stfcon"   >   
-                        <f:ajax event="itemSelect" execute="@this" render="tb6 stfCode" listener="#{staffPaySheetComponentController.makeItemNull}" />
+                        <f:ajax event="itemSelect" execute="@this" render="tb6 stfCode stfCode2"  />
                         <p:column headerText="Name">
                             #{mys.person.name}
                         </p:column>
@@ -29,6 +29,8 @@
                     </p:autoComplete>
                     <p:outputLabel value="Emp Code"></p:outputLabel>
                     <p:outputLabel id="stfCode" value="#{staffPaySheetComponentController.current.staff.code}"></p:outputLabel>
+                    <p:outputLabel value="EPF Code"></p:outputLabel>
+                    <p:outputLabel id="stfCode2" value="#{staffPaySheetComponentController.current.staff.epfNo}"></p:outputLabel>
                     <h:outputLabel value="Component Name"/>
                     <p:selectOneMenu value="#{staffPaySheetComponentController.current.paysheetComponent}">                        
                         <f:selectItems value="#{staffPaySheetComponentController.compnent}"
@@ -45,6 +47,7 @@
                     <p:inputText autocomplete="off" value="#{staffPaySheetComponentController.current.staffPaySheetComponentValue}"/>
 
                     <p:commandButton value="Add" action="#{staffPaySheetComponentController.save}" ajax="false" onclick="onSubmitButton();"/>
+                    <p:commandButton value="Clear" action="#{staffPaySheetComponentController.makeItemNull}" ajax="false" onclick="onSubmitButton();"/>
 
                 </h:panelGrid>
 
