--- a/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
+++ b/src/main/webapp/resources/channel/channelRecipt_ruhunu_1.xhtml
@@ -220,7 +220,10 @@
                                         <h:outputLabel value=":" ></h:outputLabel>
                                     </td>
                                     <td>
-                                        <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.staffFee}" >
+<!--                                        <h:outputLabel value="#{cc.attrs.bill.netTotal-cc.attrs.bill.staffFee}" >
+                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                        </h:outputLabel>-->
+                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusHosFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
                                     </td>
@@ -238,14 +241,17 @@
                                         <h:outputLabel value=":" ></h:outputLabel>
                                     </td>
                                     <td>
-                                        <h:outputLabel value="#{cc.attrs.bill.staffFee}" >
+<!--                                        <h:outputLabel value="#{cc.attrs.bill.staffFee}" >
+                                            <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                        </h:outputLabel>-->
+                                        <h:outputLabel value="#{cc.attrs.bill.vatPlusStaffFee}" >
                                             <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                         </h:outputLabel>
                                     </td>
 
                                 </tr>
 
-                                <tr>
+<!--                                <tr>
                                     <td>
                                         <h:outputLabel value="Vat(15%)" ></h:outputLabel>
                                     </td>
@@ -261,7 +267,7 @@
                                         </h:outputLabel>
                                     </td>
 
-                                </tr>
+                                </tr>-->
 
                                 <tr>
                                     <td>
