--- a/src/main/webapp/store/store_retail_sale_bht.xhtml
+++ b/src/main/webapp/store/store_retail_sale_bht.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:bil="http://java.sun.com/jsf/composite/bill"
-      xmlns:st="http://java.sun.com/jsf/composite/store">
+      xmlns:st="http://java.sun.com/jsf/composite/store/inward">
 
     <h:body>
 
@@ -138,7 +138,7 @@
                                         </h:panelGrid>
 
                                         <p:commandButton  accesskey="a" id="btnAdd" value="Add" 
-                                                         action="#{storeSaleBhtController.addBillItem}" process="@this acStock txtQty" update=":#{p:component('tblBillItem')} acStock focusItem" ></p:commandButton>
+                                                         action="#{storeSaleBhtController.addBillItem}" process="@this acStock txtQty" update=":#{p:component('tblBillItem')} :#{p:component('txtQty')} acStock focusItem " ></p:commandButton>
 
                                         <p:focus id="focusQty" for="txtQty" ></p:focus>
                                         <p:focus id="focusItem" for="acStock" ></p:focus>
